\newcommand{\PR}{\Sexpr[results=rd]{tools:::Rd_expr_PR(#1)}}

\name{CHANGES}
\title{Windows-specific changes to R}
\encoding{UTF-8}

\section{CHANGES IN R-devel}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The 32-bit and 64-bit builds are now treated equally, as it
      is anticipated that 64-bit R will soon be (if not already) the
      more comonly used.  This entails:
      
      The \command{Rterm} or \command{Rgui} title mentions 32-bit as
      well as 64-bit.
      
      The desktop icons are labelled \code{R i386} and \code{R x64}.

      \command{R CMD INSTALL} for a package with compiled code will fail
      if compilation fails for any of the installed sub-architectures:
      use \option{--no-multiarch} to override this.

      \item \code{postscript(file = "|cmd")} now works on Windows.
      
      \item \code{file.symlink()} is now implemented on NTFS file
      systems on Vista or later, for accounts which have suitable
      permissions (and most will not).
    }
  }
  
  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item The supported toolchain has changed since the one used for
      \R 2.12.0 to 2.14.x: see the\sQuote{R Installation and Administration
	manual}.  Compiled code (except DLLs) may be incompatible with
      previous toolchains (and compiled C++ code almost certainly will
      be).

      This is a \sQuote{multilib} toolchain: there is a single set of
      tools in the \file{bin} directory and which sub-architecture is
      selected by a flag: in most cases \option{-m32} \emph{vs}
      \option{-m64}.

      \item There is a new macro (aka make variable)
      \samp{SHLIB_PTHREAD_FLAGS}.  This is set to
      \option{-pthread} on builds which support it, and should be
      included in both \samp{PKG_CPPFLAGS} (or the Fortran or F9x
      equivalents) and \samp{PKG_LIBS}.
    }
  }
}

\section{CHANGES IN R VERSION 2.14.1 patched}{
  \subsection{NEW FEATURES}{
    \itemize{